# fastapi-ddd-example

./: .gitignore  Dockerfile  README.ko.md  README.md  app.py  container.py  pyproject.toml
common/errors/: exception.py
common/protocols/: __init__.py  event.py  model_mapper.py  persistence_adapter.py  usecase.py
core/: pydantic.py  snowflake.py
core/fastapi/: error.py  responses.py  routes.py
core/fastapi/event/: dispatcher.py  exception.py  handler.py  listener.py  middleware.py
modules/author/domain/: value_objects.py
modules/author/domain/aggregate/: id.py  model.py
modules/author/infrastructure/persistence/: adapter.py  mapper.py  uow.py
modules/author/infrastructure/query/: dto.py  mapper.py  uow.py
modules/author/infrastructure/query/repository/: impl.py  (+1 more)
modules/author/usecase/: __init__.py
modules/author/usecase/addBookToAuthor/: command.py  event_handler.py  impl.py
modules/author/usecase/newAuthor/: api.py  command.py  impl.py
modules/book/domain/: event.py  value_objects.py
modules/book/domain/aggregate/: id.py  model.py
modules/book/infrastructure/persistence/: adapter.py  mapper.py  uow.py
modules/book/infrastructure/query/: dto.py  mapper.py  uow.py
modules/book/usecase/: __init__.py
modules/book/usecase/addAuthor/: api.py  command.py  impl.py
modules/book/usecase/deleteBook/: api.py  command.py  impl.py
modules/book/usecase/findBookByTitle/: api.py  impl.py
modules/book/usecase/newBook/: api.py  command.py  impl.py
persistence/author/: entity.py  repository.py
persistence/book/: entity.py  repository.py
(+2 files in other folders)
