[tool.poetry]
name = "fastapi-ddd-example"
version = "0.1.0"
description = ""
authors = ["Neon K.I.D <contact@neonkid.xyz>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
asyncpg = "^0.25.0"
dependency-injector = {extras = ["yaml"], version = "^4.37.0"}
loguru = "^0.6.0"
orjson = "^3.6.6"
python-mf-data = {extras = ["rdb"], version = "^0.2.5"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[tool.black]
line-length = 100
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
